--- a/index.html
+++ b/index.html
@@ -4,11 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web-project</title>
     <link rel="shortcut icon" href="img/1.jpg" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <nav>
+           <ul class ="nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+           </ul>
+           <div class="logo"><img src="img/logo.png" alt="logo"></div>
+           <ul class ="menu">
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+           </ul>
+        </nav>
+        <div class="block">
+            <section>
+                <h1>The best products start with Figma</h1>
+                <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            </section>
+            <div class="button"><a href="#">Try For Free</a></div>
+        </div>   
+    </header>
+    <main>
+        <article>
+            <section>
+                <h2>Features</h2>
+                <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            </section>
+            <ul>
+                <li class ="item1">
+                    <h3>OpenType features Variable fonts</h3>
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </li>
+                <li class ="item2">
+                    <h3>Design with real data</h3>
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </li>
+                <li class ="item3">
+                    <h3>Fastest way to take action</h3>
+                    <p>Slate helps you see how  many more days you need to work to reach your financial goal.</p>
+                </li>
+            </ul> 
+        </article>
+        <video src="#">
+        <article>
+            <div class="block">
+                <section>
+                    <h3>Fastest way to organize</h3>
+                    <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+                </section>
+                <div class="button"><a href="#">Try For Free</a></div>
+            </div>
+            <img src="img/img-1.png" alt="image">
+        </article>
+        <article>
+            <img src="img/img-2.png" alt="image">
+            <div class="block">
+                <section>
+                    <h4>At your fingertips</h4>
+                    <h3>Lightning fast prototyping </h3>
+                    <h4>Subscribe to our Newsletter</h4>
+                    <p>Available exclusivery on Figmaland</p>
+                </section>
+                <div class="button-block">
+                    <a href="#" class="button1">Your Email</a>
+                    <a href="#" class="button2">Subscribe</a>
+                </div>
+            </div>
+        </article>
+
+    </main>
+    <footer></footer>
     <h1>Hello Word!</h1>
-    <img src="img/1.jpg" alt="my foto">
+    
 </body>
 </html>
