--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </li>
             </ul> 
         </article>
-        <video src="#">
+        <video src="video.mp4" controls></video>
         <article>
             <div class="block">
                 <section>
@@ -79,7 +79,6 @@
                 </div>
             </div>
         </article>
-
     </main>
     <footer></footer>
 </body>
