--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="section__logo"><img src="img/logo-ibm.png" alt="IBM"></div>
             <p>Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
             <figure class="section__foto">
-                <img src="img/foto.png" alt="Client Name logo Amazon">
+                <img src="img/ico.png" alt="Client Name logo Amazon">
                 <figcaption>
                     <span>Organize across</span>
                     <span>Ui designer</span>
