--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <div class="header__heading heading">
                 <h1 class="header__heading--main title">The best products start with Figma</h1>
                 <p class="header__heading--description description">
-					Most calendars are designed for teams. 
-					<span class="hidden">Slate is designed for freelancers</span>
+					Most calendars are designed for teams. <span class="hidden">Slate is designed for freelancers</span>
 				</p>
             </div>
             <div class="header__button"><a class="button" href="#">Try For Free</a></div>
